--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "next build",
     "start": "next start"
   },
- "dependencies": {
-  "next": "14.2.8"
-
-  "react": "^18",
-  "react-dom": "^18"
-}
+  "dependencies": {
+    "next": "14.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
